# reflebot-tg-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.sh
.docs/: FEATURES.md  SPEC_GENERATION.md  TELEGRAM_BOT_API.md  TELEGRAM_NEW_2_FEATURES_2026_31_03.md  TELEGRAM_NEW_FEATURES_2026_31_03.md
reflebot_telegram_bot/: __init__.py  app.py  logging.py  main.py  settings.py
reflebot_telegram_bot/api/: __init__.py  client.py  errors.py  schemas.py
reflebot_telegram_bot/backend/: __init__.py  client.py  compatibility.py  errors.py  gateway.py  schemas.py
reflebot_telegram_bot/bootstrap/: __init__.py  platform_registry.py
reflebot_telegram_bot/broker/: __init__.py  consumer.py  publisher.py  schemas.py
reflebot_telegram_bot/core/: __init__.py  models.py  planner.py  ports.py
reflebot_telegram_bot/core/use_cases/: __init__.py  broker_prompt.py  button.py  file.py  start.py  text.py
reflebot_telegram_bot/telegram/: __init__.py
tests/: conftest.py  test_api_client.py  test_architecture_boundaries.py  test_backend_compatibility.py  test_broker_consumer.py  test_core_use_cases.py  test_platform_registry.py  test_rate_limiter.py  test_telegram_platform.py
